# TrinityCore

cmake/macros/: FindMySQL.cmake
contrib/: extractor.bat
dep/boost/: CMakeLists.txt
sql/base/dev/: hotfixes_database.sql  world_database.sql
src/common/DataStores/: DB2FileLoader.cpp  DB2FileLoader.h  DB2Meta.cpp
src/common/Utilities/: TaskScheduler.cpp  Util.cpp  Util.h
src/dbedit/UI/spell_dbc/: SpellAttributes.h  SpellDataDisplay.cpp  SpellDataDisplay.h  SpellEffectProperties.cpp  SpellEffectProperties.h  SpellProperties.h
src/server/bnetserver/REST/: LoginRESTService.cpp
src/server/bnetserver/Server/: Session.cpp
src/server/database/Database/: Field.cpp  Field.h  MySQLConnection.cpp  PreparedStatement.h
src/server/database/Updater/: UpdateFetcher.cpp
src/server/game/Accounts/: AccountMgr.cpp  BattlenetAccountMgr.cpp  RBAC.h
src/server/game/Achievements/: CriteriaHandler.cpp
src/server/game/AuctionHouse/: AuctionHouseMgr.cpp
src/server/game/BattlePets/: BattlePetMgr.cpp
src/server/game/Battlefield/: Battlefield.cpp  Battlefield.h
src/server/worldserver/: worldserver.conf.dist
src/tools/: CMakeLists.txt
src/tools/db2_struct_checker/: CMakeLists.txt  System.cpp
src/tools/extractor_common/: CascHandles.cpp  CascHandles.h  DB2CascFileSource.cpp  DB2CascFileSource.h  ExtractorDB2LoadInfo.h
src/tools/map_extractor/: System.cpp  loadlib.cpp
src/tools/mmaps_generator/: PathGenerator.cpp
src/tools/vmap4_extractor/: adtfile.cpp  cascfile.cpp  cascfile.h  gameobject_extract.cpp  model.cpp  vmapexport.cpp  wdtfile.cpp  wmo.cpp
(+154 files in other folders)
